fixed z-index problems

--- a/client/src/styles/_contact.scss
+++ b/client/src/styles/_contact.scss
@@ -22,7 +22,7 @@
   }
   #footer {
     position: relative;
-    z-index: 1040;
+    z-index: 0;
     color: $color-white;
     display: flex;
     justify-content: center;
