--- a/client/src/styles/_go-to-top.scss
+++ b/client/src/styles/_go-to-top.scss
@@ -25,7 +25,7 @@
   transition-property: opacity, background-color, color;
   background-color: $color-white;
   color: $main-color;
-  z-index: 1070;
+  z-index: 0;
   i {
     position: absolute;
     top: 0;
