--- a/client/src/styles/_menu.scss
+++ b/client/src/styles/_menu.scss
@@ -82,7 +82,7 @@
   .clickable {
     position: fixed;
     display: flex;
-    z-index: 9998;
+    z-index: 1090;
     width: 100vw;
     height: 100vh;
   }
